# HVAE

./: README.md  main.py  pyproject.toml  requirements.txt
paper_experiments/: README.md  Table1_exp.ipynb  Table2_exp.ipynb  Table3_exp.ipynb  __init__.py  download_binarized_MNIST.py  load_MNIST.py  test_M1.py  test_M1M2.py
preliminary_notebooks/: hvae_tahoe_implementation.ipynb  preliminary_exp.py
svae/: __init__.py  old_vae.py  sampling.py  training.py  utils.py  vae.py  viz.py
tahoe_experiments/: README.md  __init__.py  dim_reduction.py  latent_space_exp.py  load_tahoe.py  tahoe_exp.py
